# bmi-example-fortran

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  fpm.toml
.github/workflows/: conda-and-cmake.yml  test.yml
bmi_geo/: CMakeLists.txt  bmi_geo.f90
bmi_heat/: CMakeLists.txt  bmi_geo_heat.f90  bmi_heat.f90  bmi_heat_geo.f90  bmi_main.f90  bmiheatf.pc.cmake
example/: CMakeLists.txt  bmi_geospatial_ex.f90  change_diffusivity_ex.f90  conflicting_instances_ex.f90  irf_ex.f90  vargrid_ex.f90
examples/: CMakeLists.txt  bmiheatf.out  conflicting_instances_ex.f90  get_value_ex.f90  info_ex.f90  irf_ex.f90  set_value_ex.f90  vargrid_ex.f90
heat/: CMakeLists.txt  fpm.toml  heat.f90  heatf.pc.cmake
scripts/: update_rpaths.sh
test/: CMakeLists.txt  fixtures.f90  fixtures.mod  test_by_reference.f90  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_edge_count.f90  test_get_grid_face_nodes.f90  test_get_grid_node_count.f90  test_get_grid_nodes_per_face.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_z.f90  test_get_input_var_names.f90  test_get_output_var_names.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_var_location.f90  test_get_var_type.f90  test_initialize.f90  test_set_value.f90  test_set_value_at_indices.f90  test_update.f90  test_update_until.f90
tests/: CMakeLists.txt  test_by_reference.f90  test_finalize.f90  test_get_component_name.f90  test_get_current_time.f90  test_get_end_time.f90  test_get_grid_connectivity.f90  test_get_grid_edge_nodes.f90  test_get_grid_face_count.f90  test_get_grid_face_edges.f90  test_get_grid_node_count.f90  test_get_grid_offset.f90  test_get_grid_origin.f90  test_get_grid_rank.f90  test_get_grid_shape.f90  test_get_grid_size.f90  test_get_grid_spacing.f90  test_get_grid_type.f90  test_get_grid_x.f90  test_get_grid_y.f90  test_get_grid_z.f90  test_get_input_item_count.f90  test_get_input_var_names.f90  test_get_output_item_count.f90  test_get_output_var_names.f90  test_get_start_time.f90  test_get_time_step.f90  test_get_time_units.f90  test_get_value.f90  test_get_value_at_indices.f90  test_get_value_ptr.f90  test_get_var_grid.f90  test_get_var_itemsize.f90  test_get_var_location.f90  test_get_var_nbytes.f90  test_get_var_type.f90  test_get_var_units.f90  test_initialize.f90  test_set_value.f90  test_set_value_at_indices.f90  (+3 more)
